UI改善: MakeMeロゴ追加、フォント変更、スクロール動作最適化、レイアウト調整

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="カレンダーから予定テキストを生成するアプリ"
+      content="カレンダー日程調整アプリ"
     />
-    <title>カレンダーテキストジェネレーター</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Noto Sans JP フォントを追加 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>カレンダー日程調整</title>
   </head>
   <body>
-    <noscript>このアプリを実行するにはJavaScriptを有効にしてください。</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html> 
